compiler/testData/diagnostics/irInliner/syntheticAccessors/privateMember/singleFile/usePrivateCompanionThroughInternalInlineFun.kt
// ISSUE: KT-71416
// FIR_IDENTICAL
// DIAGNOSTICS: -NOTHING_TO_INLINE

class A {
    private companion object {
        fun foo() = "OK"
    }

    private inline fun privateFun() = foo()
    internal inline fun internalInlineFun() = <!IR_PRIVATE_TYPE_USED_IN_NON_PRIVATE_INLINE_FUNCTION_CASCADING_WARNING!>privateFun()<!>
}

fun box(): String {
    return A().internalInlineFun()
}
